--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/boost__1_"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/boost__1_"
         android:supportsRtl="true"
         android:theme="@style/Theme.SimulatorApplication">
         <activity
-            android:name=".BuckConverter"
+            android:name=".Form1"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
