--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimulatorApplication">
         <activity
-            android:name=".Form1"
+            android:name=".BoostConvertor"
+            android:exported="false" />
+        <activity
+            android:name=".BuckConverter"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
