--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimulatorApplication">
         <activity
+            android:name=".RL_Circuit"
+            android:exported="false" />
+        <activity
+            android:name=".RC_Circuit"
+            android:exported="false" />
+        <activity
             android:name=".BuckIl_T"
             android:exported="false" />
         <activity
