--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/boost__1_"
-        android:label="@string/app_name"
+        android:label="PEC Simulator"
         android:roundIcon="@drawable/boost__1_"
         android:supportsRtl="true"
         android:theme="@style/Theme.SimulatorApplication">
