--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimulatorApplication">
         <activity
+            android:name=".resultBuckBoost"
+            android:exported="false" />
+        <activity
             android:name=".knowBuckBoost"
             android:exported="false" />
         <activity
