--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/boost__1_"
+        android:icon="@drawable/iconpic"
         android:label="PEC Simulator"
-        android:roundIcon="@drawable/boost__1_"
+        android:roundIcon="@drawable/iconpic"
         android:supportsRtl="true"
         android:theme="@style/Theme.SimulatorApplication">
         <activity
